--- a/index.css
+++ b/index.css
@@ -2,79 +2,99 @@ body {
     background-color: #DEEFE7;
     font-size: 1.2em;
     /*1em = 16px = 100%*/
-    margin-left: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-    padding-right: 0;
 
 
-}
-
-h1 {
-    text-align: center;
-    font-size: 2.5rem;
-    /*rem= relative em*/
-    margin-top: 80px;
-    font-family: 'Satisfy', cursive, sans-serif, monospace;
-    color: #66BFBF;
-    line-height: 2;
-
-}
-
-.myself {
-    text-align: center;
-    font-size: 1.5rem;
-    font-family: 'Raleway', sans-serif;
-    margin-left: -2%;
-    color: #262626;
-
-}
-
-.cloud1 {
-    position: absolute;
-    left: 25%;
-    top: 36%;
-
-}
-
-.cloud2 {
-    position: absolute;
-    right: 19%;
-    top: 2%;
-}
-
-.me-img {
-    border-radius: 100%;
-    width: 250px;
-    height: 250px;
-    margin-left: 40%;
-    border-style: solid;
-    border-color: #11999E;
-    border-width: 6px;
-
-}
-
-.profile {
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
-
-.hello {
-    position: relative;
-    top: 25rem;
 }
 
 hr {
 
     width: 10%;
     border-style: dotted;
-    border-left: none;
-    border-bottom: none;
-    border-right: none;
-    color: beige;
-    border-top-width: 5px;
+    border: 8px none none none;
+    color: hotpink;
+    border-top-width: .5rem;
+    margin: 0 auto;
+}
 
 
+
+h1 {
+    text-align: center;
+    font-size: 2.5rem;
+    /*rem= relative em*/
+    font-family: 'Satisfy'sans-serif, monospace;
+    color: #66BFBF;
+
+}
+
+h2 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 2% 0;
+
+}
+
+h3 {
+    color: #11999E;
+    font-weight: bolder;
+    font-family: 'Raleway', sans-serif;
+    margin: 2% 0;
+}
+
+
+a {
+    text-decoration: none;
+}
+
+#intro {
+    padding: 0% 15% 5%;
+    text-align: center;
+}
+
+.myself {
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: 'Raleway', sans-serif;
+    color: #262626;
+
+
+}
+
+.cloud1 {
+    display: grid;
+    justify-content: flex-end;
+    margin: 2% 20%;
+
+}
+
+.cloud2 {
+    display: grid;
+    justify-content: flex-start;
+    margin: 0 20%;
+}
+
+
+
+.me-img {
+    border-radius: 50%;
+    width: 20%;
+    margin-bottom: 2%;
+    margin-top: 0%;
+
+
+}
+
+.hello {
+    font-size: 3rem;
+    font-weight: bolder;
+    font-family: 'Raleway', sans-serif;
+    color: black;
+}
+
+.myself {
+    margin: 2% 0 0;
 }
 
 .student {
@@ -83,74 +103,40 @@ hr {
     color: #66BFBF;
 }
 
-h3 {
-    color: #11999E;
-    font-weight: bolder;
-    font-family: 'Raleway', sans-serif;
+#skill {
+    padding: 5% 15%;
 }
 
-.data-img {
-    width: 12.625rem;
-    height: 12.625rem;
-
+.row {
+    padding: 5%;
 }
 
-.manage-img {
-    width: 12.625rem;
-    height: 13.625rem;
-    float: right;
-
-}
-
-h2 {
-    text-align: center;
-    font-family: 'Raleway', sans-serif;
-}
-
-.code-skill {
-    float: right;
-    font-size: 1.5rem;
-    font-family: 'Raleway', sans-serif;
-    margin-left: -2%;
-    color: #262626;
-    line-height: 2;
+.skill-img {
+    width: 15rem;
+    position: relative;
+    left: 5rem;
 
 }
 
 .manage-skill {
-    font-size: 1.5rem;
-    font-family: 'Raleway', sans-serif;
-    margin-left: -2%;
-    color: #262626;
-    line-height: 2;
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 2rem;
+}
+
+.code-skill {
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 2rem;
 
 }
 
-.management {
-    margin: 0 10% 0 10%;
-    padding-left: 5%;
-    padding-top: 3%;
-    padding-bottom: 3%;
+#contact {
+    padding: 5% 15%;
+    text-align: center;
 }
-
-.skill-soft {
-    margin: 0 10% 0 10%;
-    padding-left: 5%;
-    padding-top: 2%;
-    padding-bottom: 5%;
-
-}
-
-.contact-me {
-    padding-top: 3%;
-    padding-bottom: 10%;
-}
-
-
 
 .btn {
-    margin-top: 60%;
-    margin-left: 43.5%;
     background: #66BFBF;
     background-image: -webkit-linear-gradient(top, #66BFBF, #159A9C);
     background-image: -moz-linear-gradient(top, #66BFBF, #159A9C);
@@ -161,13 +147,11 @@ h2 {
     -moz-border-radius: 28;
     border-radius: 28px;
     font-family: Arial;
-    color: #DEEFE7;
+    color: white;
     font-size: 20px;
-    padding: 10px 20px 10px 20px;
     text-decoration: none;
-    position: relative;
-    top: 2.8rem;
-    left: 2rem;
+    margin: 2%;
+
 }
 
 .btn:hover {
@@ -180,47 +164,48 @@ h2 {
     text-decoration: none;
 }
 
-.bottom-container {
+#footer {
+    padding: 5% 15%;
     background-color: #11999E;
-    padding-bottom: 2%;
-    padding-left: 5%;
+    text-align: center;
+}
+
+.social-media-icon {
+    display: inline;
+    margin: 3%;
 
 }
 
-
-
-.linkedin-img {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left: 30rem;
-    top: 2rem;
+i {
+    color: white;
 }
 
-.twitter-img {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left: 32rem;
-    top: 2rem;
-
+i:hover {
+    color: #30e3ca;
 }
 
-.instagram-img {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left: 34rem;
-    top: 2rem;
+.footer-link {
+    color: white;
+}
 
+.footer-link:hover {
+    color: #30e3cb;
 }
 
 .copyright {
-    position: relative;
-    left: 75%;
-    bottom: -1rem;
+    display: flex;
+    justify-content: flex-end;
+    margin: 2% 0 0;
+    font-size: .8rem;
 }
 
-a{
-    text-decoration:none;
+.back-link {
+    text-decoration: none;
+    color: white;
+
+}
+
+.back-link:hover {
+    text-decoration: underline;
+    color: #DEEFE7;
 }
