--- a/index.css
+++ b/index.css
@@ -1,13 +1,9 @@
 body {
-    background-color: #DEEFE7;
-    font-size: 1.2em;
+    background-color: #DEEFF7;
     /*1em = 16px = 100%*/
-
-
 }
 
 hr {
-
     width: 10%;
     border-style: dotted;
     border: 8px none none none;
@@ -22,25 +18,30 @@ h1 {
     text-align: center;
     font-size: 2.5rem;
     /*rem= relative em*/
-    font-family: 'Satisfy'sans-serif, monospace;
+    font-family: 'Satisfy'sans-serif;
     color: #66BFBF;
+    font-weight: 800;
+    font-style: italic;
 
 }
 
 h2 {
     text-align: center;
     font-family: 'Raleway', sans-serif;
-    font-size: 3rem;
-    font-weight: 800;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: black;
     margin: 2% 0;
 
 }
 
 h3 {
     color: #11999E;
-    font-weight: bolder;
     font-family: 'Raleway', sans-serif;
     margin: 2% 0;
+    font-size: 1.5rem;
+    font-weight: 650;
+    text-align: center;
 }
 
 
@@ -48,18 +49,14 @@ a {
     text-decoration: none;
 }
 
+/* startinng part */
 #intro {
     padding: 0% 15% 5%;
     text-align: center;
 }
 
 .myself {
-    text-align: center;
-    font-size: 1.5rem;
-    font-family: 'Raleway', sans-serif;
     color: #262626;
-
-
 }
 
 .cloud1 {
@@ -75,40 +72,24 @@ a {
     margin: 0 20%;
 }
 
-
-
 .me-img {
     border-radius: 50%;
-    width: 20%;
+    width: 25%;
     margin-bottom: 2%;
     margin-top: 0%;
-
-
 }
 
-.hello {
-    font-size: 3rem;
-    font-weight: bolder;
-    font-family: 'Raleway', sans-serif;
-    color: black;
-}
+/* starting part */
 
-.myself {
-    margin: 2% 0 0;
-}
 
-.student {
-    font-size: 1.5rem;
-    text-align: center;
-    color: #66BFBF;
-}
-
+/* skills part */
 #skill {
     padding: 5% 15%;
+
 }
 
 .row {
-    padding: 5%;
+    padding: 5% 0;
 }
 
 .skill-img {
@@ -118,19 +99,13 @@ a {
 
 }
 
-.manage-skill {
+.skill-text {
     font-size: 1.3rem;
     font-weight: 500;
     line-height: 2rem;
 }
 
-.code-skill {
-    font-size: 1.3rem;
-    font-weight: 500;
-    line-height: 2rem;
-
-}
-
+/* contact part */
 #contact {
     padding: 5% 15%;
     text-align: center;
@@ -164,6 +139,7 @@ a {
     text-decoration: none;
 }
 
+/* footer part */
 #footer {
     padding: 5% 15%;
     background-color: #11999E;
@@ -208,4 +184,70 @@ i:hover {
 .back-link:hover {
     text-decoration: underline;
     color: #DEEFE7;
+}
+
+@media(max-width:576px) {
+    h1 {
+        text-align: center;
+        font-size: 2.5rem;
+        /*rem= relative em*/
+        font-family: 'Satisfy'sans-serif, monospace;
+        color: #66BFBF;
+
+    }
+
+    h2 {
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.5rem;
+        font-weight: 800;
+        margin: 2% 0;
+
+    }
+
+    h3 {
+        color: #11999E;
+        font-weight: 400;
+        font-family: 'Raleway', sans-serif;
+        margin: 2% 0;
+        font-size: 1rem;
+        text-align: center;
+    }
+
+
+    .me-img {
+        border-radius: 50%;
+        width: 40%;
+        margin-bottom: 2%;
+        margin-top: -8%;
+    }
+
+    .cloud1, .cloud2 {
+        position: relative;
+        top: -1000000px;
+    }
+
+    .skill-img {
+        width: 10rem;
+        position: relative;
+        left: 2.8rem;
+    }
+
+    .skill-text {
+        font-size: 1rem;
+        font-weight: 500;
+        line-height: 1.5rem;
+        text-align: center;
+    }
+
+    .btn {
+        padding: 3px 6px;
+        font-size: 80%;
+        line-height: 1;
+    }
+
+    .copyright {
+        font-size: .5rem;
+    }
+
 }
